--- a/package.json
+++ b/package.json
@@ -3,11 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@mapbox/mapbox-sdk": "^0.15.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.11.16",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
+    "bootstrap": "^5.3.0-alpha3",
+    "chakra-ui-simple-autocomplete": "^2.3.0",
+    "mapbox-gl": "^2.13.0",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.21",
+    "react-mapbox-gl": "^5.1.1",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
